namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: monitoring
  name: monitoring
